eks_cluster/kubernetes/manifests/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-app
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
      - http:
          paths:
            - path: /
              pathType: Exact
              backend:
                service:
                  name: example-app
                  port:
                    number: 8080
